--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -24,17 +24,24 @@ jobs:
       - name: Push image to Docker Hub
         run: docker push ${{ secrets.DOCKER_USERNAME }}/devops-cicd-demo:latest
 
+      # ✅ Step 1: Authenticate to Google Cloud
+      - name: Authenticate to Google Cloud
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.GCP_SA_KEY }}
+
+      # ✅ Step 2: Install gcloud CLI
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
-          service_account_key: ${{ secrets.GCP_SA_KEY }}
-          export_default_credentials: true
 
+      # ✅ Step 3: Configure kubectl to connect to your cluster
       - name: Configure kubectl
         run: |
           gcloud container clusters get-credentials devops-demo-cluster --zone asia-south1 --project ${{ secrets.GCP_PROJECT_ID }}
 
+      # ✅ Step 4: Deploy the new image to GKE
       - name: Deploy new image to GKE
         run: |
           kubectl set image deployment/devops-demo-deployment devops-demo=${{ secrets.DOCKER_USERNAME }}/devops-cicd-demo:latest
