--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -2,7 +2,8 @@ name: Build and Deploy to GKE
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
 
 jobs:
   build:
@@ -10,39 +11,35 @@ jobs:
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
-      - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/devops-cicd-demo:latest .
-
-      - name: Login to Docker Hub
-        uses: docker/login-action@v2
-        with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-
-      - name: Push image to Docker Hub
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/devops-cicd-demo:latest
-
-      # ✅ Step 1: Authenticate to Google Cloud
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-      # ✅ Step 2: Install gcloud CLI
-      - name: Set up Google Cloud SDK
+      - name: Set up gcloud SDK
         uses: google-github-actions/setup-gcloud@v2
         with:
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
+          project_id: thecloudschool-project-id
+          install_components: 'gke-gcloud-auth-plugin'
 
-      # ✅ Step 3: Configure kubectl to connect to your cluster
-      - name: Configure kubectl
-        run: |
-          gcloud container clusters get-credentials devops-demo-cluster --zone asia-south1 --project ${{ secrets.GCP_PROJECT_ID }}
+      - name: Configure Docker to use gcloud
+        run: gcloud auth configure-docker
 
-      # ✅ Step 4: Deploy the new image to GKE
-      - name: Deploy new image to GKE
+      - name: Build and push Docker image
         run: |
-          kubectl set image deployment/devops-demo-deployment devops-demo=${{ secrets.DOCKER_USERNAME }}/devops-cicd-demo:latest
-          kubectl rollout status deployment/devops-demo-deployment
+          docker build -t gcr.io/thecloudschool-project-id/devops-cicd-demo:latest .
+          docker push gcr.io/thecloudschool-project-id/devops-cicd-demo:latest
+
+      - name: Get GKE credentials
+        run: gcloud container clusters get-credentials devops-cluster --zone asia-south1-a --project thecloudschool-project-id
+
+      - name: Install gke-gcloud-auth-plugin
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
+
+      - name: Update Kubernetes deployment
+        run: |
+          kubectl set image deployment/devops-demo-deployment devops-demo=gcr.io/thecloudschool-project-id/devops-cicd-demo:latest
