--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,45 +1,52 @@
-name: Build and Deploy to GKE
+name: Build, Push to Docker Hub, and Deploy to GKE
 
 on:
   push:
-    branches:
-      - main
+    branches: [ main ]
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
+      # Step 1: Checkout your repository
       - name: Checkout repository
-        uses: actions/checkout@v4
+        uses: actions/checkout@v3
 
+      # Step 2: Build Docker image
+      - name: Build Docker image
+        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/devops-cicd-demo:latest .
+
+      # Step 3: Login to Docker Hub
+      - name: Login to Docker Hub
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+
+      # Step 4: Push Docker image to Docker Hub
+      - name: Push image to Docker Hub
+        run: docker push ${{ secrets.DOCKER_USERNAME }}/devops-cicd-demo:latest
+
+      # Step 5: Authenticate to Google Cloud
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-      - name: Set up gcloud SDK
+      # Step 6: Set up Google Cloud SDK (includes kubectl)
+      - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
         with:
-          project_id: thecloudschool-project-id
-          install_components: 'gke-gcloud-auth-plugin'
+          project_id: ${{ secrets.GCP_PROJECT_ID }}
 
-      - name: Configure Docker to use gcloud
-        run: gcloud auth configure-docker
-
-      - name: Build and push Docker image
+      # Step 7: Configure kubectl to use your cluster
+      - name: Configure kubectl
         run: |
-          docker build -t gcr.io/thecloudschool-project-id/devops-cicd-demo:latest .
-          docker push gcr.io/thecloudschool-project-id/devops-cicd-demo:latest
+          gcloud container clusters get-credentials devops-demo-cluster --zone asia-south1 --project ${{ secrets.GCP_PROJECT_ID }}
 
-      - name: Get GKE credentials
-        run: gcloud container clusters get-credentials devops-cluster --zone asia-south1-a --project thecloudschool-project-id
-
-      - name: Install gke-gcloud-auth-plugin
+      # Step 8: Deploy new image to GKE
+      - name: Deploy new image to GKE
         run: |
-          sudo apt-get update
-          sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
-
-      - name: Update Kubernetes deployment
-        run: |
-          kubectl set image deployment/devops-demo-deployment devops-demo=gcr.io/thecloudschool-project-id/devops-cicd-demo:latest
+          kubectl set image deployment/devops-demo-deployment devops-demo=${{ secrets.DOCKER_USERNAME }}/devops-cicd-demo:latest
+          kubectl rollout status deployment/devops-demo-deployment
