--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -34,18 +34,24 @@ jobs:
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-      # Step 6: Set up Google Cloud SDK (includes kubectl)
+      # Step 6: Set up Google Cloud SDK
       - name: Set up Google Cloud SDK
         uses: google-github-actions/setup-gcloud@v2
         with:
           project_id: ${{ secrets.GCP_PROJECT_ID }}
 
-      # Step 7: Configure kubectl to use your cluster
+      # ✅ Step 7: Install the GKE Auth Plugin (this is the missing piece)
+      - name: Install GKE Auth Plugin
+        run: |
+          sudo apt-get update -y
+          sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
+
+      # Step 8: Configure kubectl
       - name: Configure kubectl
         run: |
           gcloud container clusters get-credentials devops-demo-cluster --zone asia-south1 --project ${{ secrets.GCP_PROJECT_ID }}
 
-      # Step 8: Deploy new image to GKE
+      # Step 9: Deploy new image to GKE
       - name: Deploy new image to GKE
         run: |
           kubectl set image deployment/devops-demo-deployment devops-demo=${{ secrets.DOCKER_USERNAME }}/devops-cicd-demo:latest
