--- a/.github/workflows/docker-build.yml
+++ b/.github/workflows/docker-build.yml
@@ -1,58 +1,62 @@
-name: Build, Push to Docker Hub, and Deploy to GKE
+name: Build and Deploy to GKE
 
 on:
   push:
-    branches: [ main ]
+    branches:
+      - main
+
+env:
+  PROJECT_ID: copper-mender-468111-k0
+  GKE_CLUSTER: devops-demo-cluster
+  GKE_ZONE: asia-south1-c
+  DEPLOYMENT_NAME: devops-demo-deployment
+  CONTAINER_NAME: devops-demo
+  IMAGE: thecloudschool/devops-cicd-demo
 
 jobs:
-  build-and-deploy:
+  build:
     runs-on: ubuntu-latest
 
     steps:
-      # Step 1: Checkout your repository
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - name: Checkout code
+        uses: actions/checkout@v4
 
-      # Step 2: Build Docker image
-      - name: Build Docker image
-        run: docker build -t ${{ secrets.DOCKER_USERNAME }}/devops-cicd-demo:latest .
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
-      # Step 3: Login to Docker Hub
       - name: Login to Docker Hub
-        uses: docker/login-action@v2
+        uses: docker/login-action@v3
         with:
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
+          username: ${{ secrets.DOCKERHUB_USERNAME }}
+          password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-      # Step 4: Push Docker image to Docker Hub
-      - name: Push image to Docker Hub
-        run: docker push ${{ secrets.DOCKER_USERNAME }}/devops-cicd-demo:latest
+      - name: Build and Push Docker Image
+        uses: docker/build-push-action@v5
+        with:
+          context: .
+          push: true
+          tags: ${{ env.IMAGE }}:latest
 
-      # Step 5: Authenticate to Google Cloud
+      # Authenticate to GCP
       - name: Authenticate to Google Cloud
         uses: google-github-actions/auth@v2
         with:
           credentials_json: ${{ secrets.GCP_SA_KEY }}
 
-      # Step 6: Set up Google Cloud SDK
-      - name: Set up Google Cloud SDK
-        uses: google-github-actions/setup-gcloud@v2
-        with:
-          project_id: ${{ secrets.GCP_PROJECT_ID }}
-
-      # ✅ Step 7: Install the GKE Auth Plugin (this is the missing piece)
-      - name: Install GKE Auth Plugin
+      - name: Install gcloud and GKE auth plugin
         run: |
           sudo apt-get update -y
-          sudo apt-get install -y google-cloud-sdk-gke-gcloud-auth-plugin
+          sudo apt-get install -y apt-transport-https ca-certificates gnupg curl
+          echo "deb [signed-by=/usr/share/keyrings/cloud.google.gpg] https://packages.cloud.google.com/apt cloud-sdk main" | sudo tee -a /etc/apt/sources.list.d/google-cloud-sdk.list
+          curl https://packages.cloud.google.com/apt/doc/apt-key.gpg | sudo apt-key add -
+          sudo apt-get update -y
+          sudo apt-get install -y google-cloud-sdk google-cloud-sdk-gke-gcloud-auth-plugin
 
-      # Step 8: Configure kubectl
       - name: Configure kubectl
         run: |
-          gcloud container clusters get-credentials devops-demo-cluster --zone asia-south1 --project ${{ secrets.GCP_PROJECT_ID }}
+          gcloud container clusters get-credentials $GKE_CLUSTER --zone $GKE_ZONE --project $PROJECT_ID
 
-      # Step 9: Deploy new image to GKE
-      - name: Deploy new image to GKE
+      - name: Deploy to GKE
         run: |
-          kubectl set image deployment/devops-demo-deployment devops-demo=${{ secrets.DOCKER_USERNAME }}/devops-cicd-demo:latest
-          kubectl rollout status deployment/devops-demo-deployment
+          kubectl set image deployment/$DEPLOYMENT_NAME $CONTAINER_NAME=${{ env.IMAGE }}:latest
+          kubectl rollout status deployment/$DEPLOYMENT_NAME
